corrects notice and header spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
  @import url(https://fonts.googleapis.com/css?family=Raleway);
 
  body {
-   margin-top: 70px;
+  //  margin-top: 100px;
    background-color: #FCFCFC;
  }
 
@@ -27,8 +27,18 @@
    background-color: #C6DCF0;
    padding-left: 10px;
    line-height: 40px;
-   margin-top: 0px;
+   margin-bottom: 0px;
+   margin-top: 104px;
  }
+
+ .alert {
+   background-color: #C6DCF0;
+   padding-left: 10px;
+   line-height: 40px;
+   margin-bottom: 0px;
+  //  margin-top: 104px;
+ }
+
  .top-bar {
    margin: 0px;
    padding: 10px;
@@ -47,7 +57,7 @@
      cursor: pointer;
  }
  h1 {
-   margin-top: 8%;
+   margin-top: 44px;
  }
 
  /* The container <div> - needed to position the dropdown content */
